--- a/APP/static/css/style.css
+++ b/APP/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('/APP/static/css/background.jpg');
+    background-image: url('background.jpg');
     background-color: #00000000;
     margin: 0;
     padding: 0;
@@ -13,9 +13,9 @@ body {
 .login-container {
     background-color: #181818;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 30px;
     text-align: center;
-    width: 300px;
+    width: 400px;
     box-shadow: 0 0 200px 50px #00b7ff33;
 }
 
