--- a/APP/templates/novoaluno.html
+++ b/APP/templates/novoaluno.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tela login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('/APP/static/css/background.jpg');
+            background-color: #292828;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -26,11 +26,6 @@
 
         .form-container{
             box-shadow: 0 0 200px 50px #00b7ff33;
-        }
-
-        .form-container:hover{
-            box-shadow: 0 0 200px 50px rgba(0, 238, 255, 0.514);
-            transition: 3 ease-in-out;
         }
 
         label {
