--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -11,7 +11,7 @@
     <div class="login-container">
         <img src="https://static.portaldaindustria.com.br/media/uploads/logotipos/logo-senai.png" alt="Logo da Empresa" width="200" height="100">
         <h2>LOGIN</h2>
-        <form action="/logar" method="post">
+        <form action="login.php" method="post">
             <input type="text" name="ra" placeholder="RA" required>
             <input type="submit" value="ENVIAR">
         </form>
@@ -20,3 +20,13 @@
 </body>
 </html>
 
+<!--
+Exercicio:
+
+Faça uma simulação de redimencionamento com a segunte regra:
+
+1- Crie uma nova pagina chamada diariobordo.html.
+2- Crie uma nova rota para essa página.
+3- Se o RA for o da Juliana então redirecione para a página diariobordo.html e no 
+    topo da pagina mostre o RA dela.
+-->
