--- a/APP/static/css/style.css
+++ b/APP/static/css/style.css
@@ -10,14 +10,29 @@ body {
     height: 100vh;
 }
 
+
+
 .login-container {
     background-color: #181818;
+    margin: auto;
     padding: 20px;
     border-radius: 30px;
     text-align: center;
     width: 400px;
     box-shadow: 0 0 200px 50px #00b7ff33;
 }
+
+.mensagem {
+    width: 90px;
+    padding: 10px;
+    background-color: #f07878;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 10px;
+}
+
 
 .login-container:hover {
     box-shadow: 0 0 200px 50px rgba(0, 238, 255, 0.514);
@@ -41,7 +56,7 @@ body {
     padding: 10px;
     margin: 10px 0;
     border: 2px solid #ffffff;
-    border-radius: 20px;
+    border-radius: 30px;
     box-sizing: border-box;
 }
 
