--- a/APP/templates/diariobordo.html
+++ b/APP/templates/diariobordo.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>diariobordo</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            font-size: 40px;
+            background: linear-gradient(135deg, #030e3f 0%, #35313e 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: #fffefe;
+        }
+
+        .diariobordo {
+            background-color: #323232;
+            padding: 30px 40px;
+            border-radius: 15px;
+            box-shadow: 0 0 20px 3px rgba(4, 236, 244, 0.1);
+            text-align: center;
+        }
+
+        .diariobordo h1 {
+            font-size: 24px;
+            margin-bottom: 10px;
+            color: #4A4A4A;
+        }
+
+        .diariobordo p {
+            font-size: 18px;
+            margin-top: 10px;
+            color: #777;
+        }
+    </style>
 </head>
 <body>
     <div class="diariobordo">
-        olá {{ra}}
+        Olá {{ra}}
 
     </div>
 </body>
