--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <label for="ra">RA:</label>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
@@ -11,9 +12,15 @@
     <div class="login-container">
         <img src="https://static.portaldaindustria.com.br/media/uploads/logotipos/logo-senai.png" alt="Logo da Empresa" width="200" height="100">
         <h2>LOGIN</h2>
-        <form action="login.php" method="post">
+        <form action="/logar" method="post">
             <input type="text" name="ra" placeholder="RA" required>
             <input type="submit" value="ENVIAR">
+            {% if mensagem %}
+            <div class="mensagem">
+                {{ mensagem }}
+            </div>
+            {% endif %}
+
         </form>
         <a href="{{url_for('cadastrar_aluno')}}">Cadastre-se</a>
     </div>
