--- a/APP/static/css/style.css
+++ b/APP/static/css/style.css
@@ -35,7 +35,9 @@ body {
     box-shadow: 0 0 200px 50px rgba(0, 238, 255, 0.514);
     transition: 3 ease-in-out;
 }
-
+h2,mensagem{
+    color:#ffffff;
+}
 
 .login-container img {
     margin-bottom: 20px;
@@ -53,7 +55,7 @@ body {
     padding: 10px;
     margin: 10px 0;
     border: 2px solid #ffffff;
-    border-radius: 30px;
+    border-radius: 10px;
     box-sizing: border-box;
 }
 
@@ -64,7 +66,7 @@ body {
     background-color: #007bff;
     color: #ffffff;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.4s ease;
