--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -9,11 +9,16 @@
     
 </head>
 <body>
-    <div class="login-container">
+    {% if msgbanco %}
+    <div class="mensagem">
+        {{ msgbanco }}
+    </div>
+    {% endif %}
+        <div class="login-container">
         <img src="https://static.portaldaindustria.com.br/media/uploads/logotipos/logo-senai.png" alt="Logo da Empresa" width="200" height="100">
         <h2>LOGIN</h2>
         <form action="/logar" method="post">
-            <input type="text" name="ra" placeholder="RA" required>
+            <input type="text" name="ra" placeholder="RA" maxlength="8" required>
             <input type="submit" value="ENVIAR">
             {% if mensagem %}
             <div class="text-center">
